--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -332,11 +332,19 @@ nav p{
   justify-content: center;
   flex-flow:column;
 }
+.icons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 i{
   color:rgba(255,255,255,0.9);
 }
 i:hover{
   color: red;
+}
+a{
+  margin:0 0.3rem;
 }
 
 /* bgbanner5 */
