--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -367,7 +367,7 @@ a{
 .footercontent{
   margin:2rem 0;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: flex-end;
   flex-flow:column;
     height:15rem;
